--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Weather App</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
-  <script src="./script.js" defer></script>
-  <link rel="icon" type="image/png" href="x-icon.png"/>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <script src="assets/js/script.js" defer></script>
+  <link rel="icon" type="image/png" href="/assets/images/x-icon.png"/>
 </head>
 
 <body>
