--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
+  <script src="./config.js" defer></script>
   <script src="./script.js" defer></script>
   <link rel="icon" type="image/png" href="x-icon.png"/>
 </head>
